--- a/web/index.html
+++ b/web/index.html
@@ -9,11 +9,13 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet"  href="css/skeleton.css">
     </head>
     <body>
         <div>
             <form action="Somar" method="GET">
                 <input type="submit" value="Somar"/>
+                
             </form>
             
         </div>
